--- a/src/components/Feed/Feed.css
+++ b/src/components/Feed/Feed.css
@@ -22,6 +22,7 @@ main {
   border-left: 3px solid transparent;
   padding: 10px;
   width: 294px;
+  margin: 4px 0;
 }
 
 .feed-dashboard ul li:hover,
@@ -30,6 +31,26 @@ main {
   cursor: pointer;
   border-left: 3px solid #2f80ed;
 }
+/*
+.header-navlinks ul li:hover {
+  color: #2f80ed;
+  cursor: pointer;
+  position: relative;
+  
+}
+
+.header-navlinks li:hover::after {
+  content: "";
+  position: absolute;
+  top: calc(100% + 22px);
+  left: 0;
+  right: 0;
+  display: block;
+  border-top: 0.2rem solid #2f80ed;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+} 
+*/
 
 .tweet {
   background-color: #fff;
@@ -49,6 +70,14 @@ main {
   font-size: 14px;
   left: 0;
 }
+
+/* .person-retweet img {
+  width: 16px;
+  height: 16px;
+  position: relative;
+  padding-right: 5px;
+  top: 5px;
+} */
 
 .tweet img {
   width: 40px;
@@ -82,6 +111,7 @@ main {
 .message {
   color: #4f4f4f;
   padding-block: 10px;
+  width: 544.15px;
 }
 
 .feed-image-posts {
@@ -103,6 +133,7 @@ hr {
   width: 100%;
   padding: 0;
   margin: 0;
+  margin-top: 15px;
 }
 
 .tweet-post-icons {
@@ -143,7 +174,8 @@ hr {
   justify-content: space-between;
 }
 
-.input {
+.input,
+.tweets-reply-msg {
   width: 90%;
   text-indent: 15px;
   height: 40px;
@@ -151,9 +183,34 @@ hr {
   box-sizing: border-box;
   border-radius: 8px;
   background-color: #fafafa;
+  margin-left: auto;
+}
+
+.tweets-reply {
+  position: relative;
+}
+
+.tweets-reply-img {
+  position: absolute;
+  top: 0;
+}
+
+.tweets-reply-msg {
+  padding: 15px;
+  height: auto;
+  text-indent: 0;
 }
 
 input::placeholder {
   color: #bdbdbd;
   font-size: 14px;
+}
+
+.tweet-reply-user {
+  font-size: 14px;
+  font-weight: 500;
+  font-family: "Poppins", sans-serif;
+  position: relative;
+  top: -5px;
+  padding-right: 5px;
 }
