--- a/src/components/Info/Info.css
+++ b/src/components/Info/Info.css
@@ -1,69 +1,59 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap");
+/* 
+.box {
+  display: flex;
+} */
 
 .info {
+  background-color: #fff;
+  width: 70%;
+  margin: auto;
+  border-radius: 12px;
   position: relative;
-}
-
-.header-info::after {
-  position: absolute;
-  content: "Photographer & Filmmaker based in Copenhagen, Denmark ✵ 🇩🇰";
-  bottom: 40px;
-  width: 50%;
-  color: #828282;
-  text-align: start;
-  font-size: 18px;
+  bottom: 50px;
+  display: flex;
+  justify-content: space-around;
 }
 
 .header-info {
   display: flex;
   justify-content: space-around;
   font-family: "Poppins", sans-serif;
+  width: 65%;
   position: relative;
-  top: -80px;
-  z-index: 45;
-  background-color: #fff;
-  width: 75%;
-  text-align: center;
-  border-radius: 12px;
-  margin: auto;
-  border: 1px solid #fff;
+  top: 10px;
 }
+
+/* .header-info-bio {
+  position: absolute;
+  top: 50%;
+  left:
+} */
 
 .header-info img {
   width: 152px;
-  border: 2px solid #fff;
+  border: 4px solid #fff;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
   border-radius: 8px;
   position: relative;
   top: -50px;
 }
 
-.header-info-friends ul {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  position: relative;
-  left: -65px;
-}
-
-.header-info-friends ul li {
-  list-style-type: none;
-  padding: 5px;
-  font-size: 12px;
-}
-
-.header-info-friends ul li:first-of-type {
+.header-info-userProfile {
+  color: #333333;
   font-weight: 600;
   font-size: 24px;
 }
 
-strong {
-  color: #333333;
-  font-weight: 600;
+.header-info-userCount {
+  font-size: 12px;
 }
 
-.header-info-friends span {
+.header-info-userFollow {
   color: #828282;
+  font-weight: 600;
+  font-size: 24px;
+  font-size: 12px;
 }
 
 .header-info-button button {
@@ -73,11 +63,17 @@ strong {
   width: 101px;
   height: 32px;
   border: 1px solid #2f80ed;
+  cursor: pointer;
   position: relative;
   top: 10px;
-  cursor: pointer;
 }
 
-.header-info-button img {
-  width: 14px;
+strong {
+  color: #333333;
+  font-weight: 600;
+}
+
+.header-info-button button img {
+  position: relative;
+  top: 1px;
 }
