--- a/src/components/Feed/Feed.css
+++ b/src/components/Feed/Feed.css
@@ -5,60 +5,12 @@ main {
   justify-content: center;
 }
 
-.feed-dashboard {
-  background-color: #fff;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
-  border-radius: 8px;
-  font-family: "Poppins", sans-serif;
-  height: 200px;
-  display: inline-flex;
-  align-items: center;
-}
-
-.feed-dashboard ul li {
-  list-style-type: none;
-  color: #828282;
-  font-weight: 600;
-  border-left: 3px solid transparent;
-  padding: 10px;
-  width: 294px;
-  margin: 4px 0;
-}
-
-.feed-dashboard ul li:hover,
-.feed-dashboard .active {
-  color: #2f80ed;
-  cursor: pointer;
-  border-left: 3px solid #2f80ed;
-}
-/*
-.header-navlinks ul li:hover {
-  color: #2f80ed;
-  cursor: pointer;
-  position: relative;
-  
-}
-
-.header-navlinks li:hover::after {
-  content: "";
-  position: absolute;
-  top: calc(100% + 22px);
-  left: 0;
-  right: 0;
-  display: block;
-  border-top: 0.2rem solid #2f80ed;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-} 
-*/
-
 .tweet {
   background-color: #fff;
   margin: 35px;
   width: 745px;
   border-radius: 8px;
   font-weight: 500;
-  position: relative;
   padding: 20px;
   position: relative;
 }
@@ -71,7 +23,7 @@ main {
   left: 0;
 }
 
-/* .person-retweet img {
+/* .person-retweet-img {
   width: 16px;
   height: 16px;
   position: relative;
@@ -91,7 +43,7 @@ main {
   height: 16.67px;
   top: 3px;
   position: relative;
-  padding-right: 5px;
+  /* padding-right: 5px; */
 }
 
 .tweet .date {
@@ -133,12 +85,12 @@ hr {
   width: 100%;
   padding: 0;
   margin: 0;
-  margin-top: 15px;
 }
 
 .tweet-post-icons {
   display: flex;
   justify-content: space-around;
+  align-items: center;
 }
 
 .post-icon {
@@ -184,10 +136,15 @@ hr {
   border-radius: 8px;
   background-color: #fafafa;
   margin-left: auto;
+  margin-bottom: 15px;
 }
 
 .tweets-reply {
   position: relative;
+}
+
+.tweet-reply-user-chat {
+  color: #4f4f4f;
 }
 
 .tweets-reply-img {
