--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,1 +1,13 @@
+@font-face {
+  font-family: "Montserrat";
+  src: url("../../fonts/Montserrat/Montserrat-Regular.ttf") format("truetype");
+  font-display: swap;
+}
 
+footer {
+  font-weight: 700;
+  font-size: 14px;
+  font-family: "Montserrat", sans-serif;
+  color: #a9a9a9;
+  text-align: center;
+}
