--- a/src/components/Feed/Feed.css
+++ b/src/components/Feed/Feed.css
@@ -13,6 +13,7 @@ main {
   font-weight: 500;
   padding: 20px;
   position: relative;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
 }
 
 .person-retweet {
@@ -22,14 +23,6 @@ main {
   font-size: 14px;
   left: 0;
 }
-
-/* .person-retweet-img {
-  width: 16px;
-  height: 16px;
-  position: relative;
-  padding-right: 5px;
-  top: 5px;
-} */
 
 .tweet img {
   width: 40px;
@@ -43,7 +36,6 @@ main {
   height: 16.67px;
   top: 3px;
   position: relative;
-  /* padding-right: 5px; */
 }
 
 .tweet .date {
