--- a/src/components/Follow/Follow.css
+++ b/src/components/Follow/Follow.css
@@ -1,3 +1,54 @@
-.follow {
-  height: 517.7px;
+.follow-button {
+  background-color: #2f80ed;
+  color: #fff;
+  border-radius: 4px;
+  border: 1px solid #2f80ed;
+  cursor: pointer;
+  padding: 5px;
+  font-size: 12px;
+}
+
+.follow ul {
+  width: 100%;
+}
+
+.follow-user-img {
+  width: 100%;
+  height: 76px;
+  border-radius: 8px;
+  object-fit: cover;
+  margin-top: 15px;
+}
+.follow-bio {
+  width: 100%;
+  font-size: 14px;
+  width: 271px;
+}
+
+.follow-position {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.follow-position-between img {
+  width: 40px;
+  height: 40px;
+  align-items: center;
+  border-radius: 4px;
+}
+
+.follow-position-between {
+  display: flex;
+  justify-content: space-between;
+  width: 271px
+}
+
+.follow-user-name {
+  color: #000000;
+  font-size: 16px;
+}
+
+.follow-user {
+  display: inline-flex;
 }
