--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,9 +4,9 @@ nav {
   align-items: center;
   padding: 10px;
   background-color: #fff;
-  position: sticky;
-  position: -webkit-sticky;
   top: 0;
+  left: 0;
+  right: 0;
   z-index: 400;
 }
 
@@ -28,6 +28,7 @@ nav {
   font-size: 14px;
   color: #828282;
   font-weight: 500;
+  text-decoration: none;
 }
 
 .header-navlinks ul li:hover {
@@ -36,10 +37,19 @@ nav {
   position: relative;
 }
 
+a {
+  text-decoration: none;
+  color: #828282;
+}
+
+h2 a {
+  color: #333333;
+}
+
 .header-navlinks li:hover::after {
   content: "";
   position: absolute;
-  top: calc(100% + 22px);
+  top: calc(100% + 24px);
   left: 0;
   right: 0;
   display: block;
@@ -63,4 +73,11 @@ nav {
   margin-left: 5px;
   font-weight: 700;
   color: #333333;
+}
+
+.header-navdropdown {
+  width: 20px;
+  height: 20px;
+  position: relative;
+  bottom: 6px;
 }
