--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -2,3 +2,9 @@
   display: flex;
   justify-content: space-evenly;
 }
+
+@media (max-width: 1057px) {
+  .Home-Feed {
+    justify-content: center;
+  }
+}
