--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -64,6 +64,7 @@ h2 a {
   object-fit: cover;
   border: 1px solid transparent;
   border-radius: 5px;
+  position: relative;
 }
 
 .header-profile span {
@@ -80,4 +81,8 @@ h2 a {
   height: 20px;
   position: relative;
   bottom: 6px;
+}
+
+.dropdown-dropdown {
+  display: none;
 }
