--- a/src/components/NavbarBottom/NavbarBottom.css
+++ b/src/components/NavbarBottom/NavbarBottom.css
@@ -4,18 +4,19 @@
   width: 100% !important;
   background-color: #fff;
   color: #fff;
-  /* padding: 20px; */
+  z-index: 100;
 }
 
 .footer-bottom ul {
   display: flex !important;
   justify-content: space-around !important;
   align-items: center !important;
+  height: 68.4px;
 }
 
 .footer-bottom li {
   list-style-type: none !important;
-  padding: 10px 30px;
+  padding: 10px 40px;
   border: 1px solid transparent;
 }
 
@@ -23,4 +24,10 @@
   background-color: #f2f2f2;
   border-radius: 8px;
   border: 1px solid #f2f2f2;
+}
+
+.footer-bottom img:hover {
+  /* https://codepen.io/sosuke/pen/Pjoqqp */
+  filter: invert(35%) sepia(87%) saturate(901%) hue-rotate(187deg)
+    brightness(108%) contrast(88%);
 }
