--- a/src/index.css
+++ b/src/index.css
@@ -68,7 +68,6 @@ button {
     margin-bottom: 50px;
     width: 100% !important;
   }
-  ,
   .UserTweet {
     width: 100% !important;
   }
@@ -77,7 +76,7 @@ button {
 @media (max-width: 971px) {
   .UserTweet,
   .tweet {
-    width: 550px !important;
+    width: 480px !important;
   }
 }
 
@@ -255,13 +254,19 @@ form {
 }
 
 @media (max-width: 519px) {
-  .feed-dashboard.trends,
-  .follow {
-    width: 92% !important;
-    margin: auto;
-  }
   body {
     overflow-x: hidden;
+  }
+}
+
+@media (max-width: 870px) {
+  .trends {
+    display: flex !important;
+  }
+  .dash-div,
+  .feed-dashboard {
+    display: flex;
+    margin-bottom: 60px;
   }
 }
 
@@ -282,5 +287,40 @@ form {
   }
   .setting {
     width: 85% !important;
+  }
+}
+
+@media (min-width: 871px) {
+  .Home-Feed-Down {
+    margin: 20px;
+  }
+  .feed-dashboard,
+  .trends .follow ul,
+  .trend-item trend-item-position,
+  .follow-position div {
+    width: 300px;
+  }
+  .follow-user-img {
+    width: 90% !important;
+  }
+  .follow-bio p {
+    display: inline;
+  }
+  .bl {
+    border-left: 3px solid transparent !important;
+  }
+}
+
+@media (max-width: 870px) {
+  .tweet,
+  .UserTweet,
+  .trends,
+  .feed-dashboard,
+  .Home-Feed {
+    width: 95% !important;
+    margin: auto;
+  }
+  .feed-dashboard {
+    display: block;
   }
 }
