--- a/src/components/Info/Info.css
+++ b/src/components/Info/Info.css
@@ -19,19 +19,73 @@
   display: flex;
   justify-content: space-around;
   font-family: "Poppins", sans-serif;
-  width: 65%;
+  width: 70%;
   position: relative;
   top: 10px;
 }
 
-/* .header-info-bio {
+.header-info p {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  text-align: left;
+  width: 80%;
   position: absolute;
-  top: 50%;
-  left:
-} */
+  top: 50px;
+  left: 31%;
+}
+
+@media (min-width: 1400px) {
+  .header-info p {
+    left: 27%;
+  }
+}
+
+@media (max-width: 1071px) {
+  .header-info {
+    width: 80%;
+  }
+}
+
+@media (max-width: 892px) {
+  .header-info p {
+    top: 70%;
+    width: 100% !important;
+    left: 0px;
+    font-size: 14px;
+  }
+  .header-info-userProfile {
+    font-size: 18px !important;
+  }
+}
+
+@media (max-width: 829px) {
+  .info {
+    width: 80%;
+  }
+}
+
+@media (max-width: 829px) {
+  .info {
+    width: 90%;
+  }
+}
+
+@media (max-width: 592px) {
+  .info {
+    width: 96%;
+  }
+}
+
+@media (max-width: 564px) {
+  .header-info img {
+    width: 90px !important;
+  }
+}
 
 .header-info img {
   width: 152px;
+  /* width: 50%; */
   border: 4px solid #fff;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
   border-radius: 8px;
@@ -43,6 +97,32 @@
   color: #333333;
   font-weight: 600;
   font-size: 24px;
+}
+.following,
+.followers {
+  position: relative;
+  top: 5px;
+}
+
+@media (max-width: 829px) {
+  .following,
+  .followers {
+    top: 0;
+  }
+  .header-info-userProfile {
+    font-size: 16px !important;
+  }
+}
+
+@media (max-width: 564px) {
+  .header-info p {
+    top: 45%;
+  }
+}
+@media (max-width: 633px) {
+  .info {
+    padding: 10px;
+  }
 }
 
 .header-info-userCount {
